# DotEvery.Editor

./: .gitignore  Cargo.toml  README.md  build.ps1  docker-compose.yml  init-npm.ps1  start-web-server.ps1
docker/cargo/: Dockerfile
docker/node/: Dockerfile
dotevery-editor-lib/: Cargo.toml
dotevery-editor-lib/src/: lib.rs  util.rs
dotevery-editor-lib/src/components/: dotevery_editor.rs  dotevery_editor_agent.rs  dotevery_editor_agent_bridge.rs  dotevery_editor_controller_proxy_agent.rs  drag_module_agent.rs  dragging_program_module.rs  impl_splitter.rs  mod.rs  program_module.rs  program_module_list.rs
dotevery-editor-lib/src/logic/: dotevery_editor.rs  dotevery_editor_controller.rs  mod.rs  program_module.rs  program_module_list.rs
dotevery-editor-lib/src/logic/tests/: isomorphisms.rs  mod.rs  program_module.rs  program_module_list.rs
dotevery-editor-simple-js/: .gitignore  Cargo.toml
dotevery-editor-simple-js/src/: controller.rs  lib.rs  main_component.rs  program_module_enum.rs
node/: .gitignore  package-lock.json  package.json  webpack.config.js
node/src/: .gitignore  index.html  index.js  style.scss
src/: dotevery_editor.rs  lib.rs  util.rs
src/components/: dotevery_editor.rs  dotevery_editor_agent.rs  drag_module_agent.rs  dragging_program_module.rs  mod.rs  program_module.rs  program_module_list.rs
src/logic/: dotevery_editor.rs  dotevery_editor_controller.rs  mod.rs  program_module.rs  program_module_list.rs
src/logic/tests/: isomorphisms.rs  mod.rs  program_module.rs  program_module_list.rs
src/program_module/: drag_module_agent.rs  mod.rs  program_module.rs  program_module_list.rs
