[package]
name = "dotevery-editor-simple-js"
version = "0.1.0"
authors = ["White-Green <43771790+White-Green@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
dotevery-editor-lib = { path = "../dotevery-editor-lib" }
js-sys = "0.3.39"
yew = "0.17"
wasm-bindgen = "0.2.64"
wee_alloc = "0.4.5"
serde = "1.0.111"
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
enum-iterator = "0.6.0"

[dependencies.web-sys]
version = "0.3.39"
features = ["HtmlAnchorElement", "Exception", "CssStyleDeclaration", "DomRect", "Element", "HtmlInputElement", "Node", "NodeList", "HtmlSelectElement"]

[dev-dependencies]
wasm-bindgen-test = "0.3.14"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggresive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true